# Xp-58-Tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp  xp58.cpp  xp58.h
.github/workflows/: build-test.yml  build.yml
